--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ build/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+# in case there is configuration stuff
+/modules/
+.forgeinator5000
